--- a/shortingAlgorithmsVizualizer/shortingAlgorithmsVizualizer_wpf/View/MainWindow.xaml
+++ b/shortingAlgorithmsVizualizer/shortingAlgorithmsVizualizer_wpf/View/MainWindow.xaml
@@ -19,7 +19,7 @@
             </MenuItem>
             <Grid>
                 <TextBox x:Name="arrayInputTextbox" Width="300" TextChanged="OnArrayInputTextboxTextChanged" />
-                <Label x:Name="arrayInputTextboxPlaceholderLabel" Content="Write the integer array here in format: &quot;1,2,3,4,5&quot;" Foreground="Gray" Margin="0,0,0,0" IsHitTestVisible="False"/>
+                <Label x:Name="arrayInputTextboxPlaceholderLabel" Content="Write the integer array here in format: &quot;1,2,3,4,5&quot;" IsHitTestVisible="False"/>
             </Grid>
             <MenuItem Header="Exit" HorizontalAlignment="Right"></MenuItem>
         </Menu>
