made viewmodel and Command class

--- a/shortingAlgorithmsVizualizer/shortingAlgorithmsVizualizer_wpf/View/MainWindow.xaml
+++ b/shortingAlgorithmsVizualizer/shortingAlgorithmsVizualizer_wpf/View/MainWindow.xaml
@@ -13,7 +13,7 @@
                     <DockPanel HorizontalAlignment="Stretch"/>
                 </ItemsPanelTemplate>
             </Menu.ItemsPanel>
-            <MenuItem Header="Start algorithm"/>
+            <MenuItem Command="" Header="Start algorithm"/>
             <MenuItem Header="Choose sorting algorithm">
                 <MenuItem Header="QuickSort"/>
             </MenuItem>
