made InputListInAGoodFormat method for main, and data binded the choose sorting algorithm button

--- a/sortingAlgorithmsVizualizer/sortingAlgorithmsVizualizer_wpf/View/MainWindow.xaml
+++ b/sortingAlgorithmsVizualizer/sortingAlgorithmsVizualizer_wpf/View/MainWindow.xaml
@@ -14,7 +14,7 @@
                 </ItemsPanelTemplate>
             </Menu.ItemsPanel>
             <MenuItem Command="{Binding Start_Stop_AlgorithmCommand}" CommandParameter="{Binding Text, ElementName=arrayInputTextbox}" Header="Start algorithm"/>
-            <MenuItem Header="Choose sorting algorithm (QuickSort)">
+            <MenuItem Header="{Binding modelSortingTypeAsMenuItemHeader}">
                 <MenuItem Command="{Binding SetAlgorithmToCommand}" CommandParameter="QuickSort" Header="QuickSort"/>
                 <MenuItem Command="{Binding SetAlgorithmToCommand}" CommandParameter="MergeSort" Header="MergeSort"/>
             </MenuItem>
