--- a/sortingAlgorithmsVisualizer/sortingAlgorithmsVisualizer_wpf/View/MainWindow.xaml
+++ b/sortingAlgorithmsVisualizer/sortingAlgorithmsVisualizer_wpf/View/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="sortingAlgorithmsVizualizer_wpf.View.MainWindow"
+﻿<Window x:Class="sortingAlgorithmsVisualizer_wpf.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:sortingAlgorithmsVizualizer_wpf"
+        xmlns:local="clr-namespace:sortingAlgorithmsVisualizer_wpf"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
@@ -24,5 +24,22 @@
             </Grid>
             <MenuItem Command="{Binding ExitCommand}" Header="Exit" HorizontalAlignment="Right"></MenuItem>
         </Menu>
+        <ItemsControl VerticalAlignment="Top" Height="405" Margin="0,28,0,0" ItemsSource="{Binding modelList}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <UniformGrid Rows="1"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Button Content="{Binding value}" Height="{Binding height}" IsEnabled="False" VerticalAlignment="Bottom">
+                        <Button.Style>
+                            <Style TargetType="Button">
+                            </Style>
+                        </Button.Style>
+                    </Button>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
     </Grid>
 </Window>
