--- a/My projects/ASP.NET/SpendSmart/Views/Home/Index.cshtml
+++ b/My projects/ASP.NET/SpendSmart/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <a asp-controller="Home" asp-action="Expenses" class="btn btn-primary">Overview</a>
+    <!--asp-controller="Home" is not necessary bc we are already in the Home controller-->
 </div>
