--- a/My projects/ASP.NET/SpendSmart/Views/Home/Index.cshtml
+++ b/My projects/ASP.NET/SpendSmart/Views/Home/Index.cshtml
@@ -6,5 +6,5 @@
     <h1 class="display-4">Welcome</h1>
     <a asp-controller="Home" asp-action="Expenses" class="btn btn-primary">Overview</a>
     <!--asp-controller="Home" is not necessary bc we are already in the Home controller-->
-    <a asp-action="CreateEditExpense" class="btn">Create or edit expense</a>
+    <a asp-action="CreateEditExpense" class="btn">Create expense</a>
 </div>
